Removed more warnings from source.  Compatible with JDK11 thru JDK21